--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,11 +13,10 @@
     </div>
     <div class="tech">
       <h2>Code</h2>
+      <i class="devicon-python-plain-wordmark"></i>
+      <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Highly proficient in Python and C++, with solid experience in JavaScript.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
