Changed About Section Icons

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,13 +4,12 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
+      <h2>System Proficiency</h2>
+      <i class="devicon-linux-plain colored"></i>
+      <i class="devicon-apple-original colored"></i>
+      <i class="devicon-windows8-original colored"></i> <!-- Replace with a newer Windows icon if available. -->
+      <p>Proficient across multiple operating systems, including Linux distributions, Mac OS, and Windows. Familiar with development environments, system configurations, and everyday tasks on each platform.</p>
+    </div>  
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-python-plain-wordmark"></i>
@@ -19,11 +18,10 @@
       <p>Highly proficient in Python and C++, with solid experience in JavaScript.</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
+      <h2>Technologies/Environments</h2>
+      <i class="devicon-visualstudio-plain"></i>
+      <i class="devicon-jira-plain-wordmark"></i>
       <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Specialized in creating Windows Form applications with Visual Studio. Experienced in project management with Jira and version control with Git.</p>
     </div>
 </div>
