Updated sizing/formatting in about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
   <div class="user">
     <div class="tech">
       <h2>System Proficiency</h2>
-      <i class="devicon-linux-plain colored"></i>
+      <i class="devicon-ubuntu-plain-wordmark colored"></i>
       <i class="devicon-apple-original colored"></i>
       <i class="devicon-windows8-original colored"></i> <!-- Replace with a newer Windows icon if available. -->
       <p>Proficient across multiple operating systems, including Linux distributions, Mac OS, and Windows. Familiar with development environments, system configurations, and everyday tasks on each platform.</p>
@@ -19,9 +19,9 @@
     </div>
     <div class="tech">
       <h2>Technologies/Environments</h2>
-      <i class="devicon-visualstudio-plain"></i>
-      <i class="devicon-jira-plain-wordmark"></i>
-      <i class="devicon-git-plain"></i>
+      <i class="devicon-visualstudio-plain colored"></i>
+      <i class="devicon-jira-plain-wordmark colored"></i>
+      <i class="devicon-git-plain colored"></i>
       <p>Specialized in creating Windows Form applications with Visual Studio. Experienced in project management with Jira and version control with Git.</p>
     </div>
 </div>
