Updated Projects section

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,35 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="InCollege" src="{{ "/assets/img/InCollege.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> InCollege </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> SQLite </li>
+      <li> Git </li>
+      <li> Jira </li>
+      <li> Python (Programming Language) </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>An object-oriented command-line interface replicating LinkedIn's core functionalities. Features dynamic menu navigation, profile management, job listings, and professional networking capabilities.</p>
+    <a class="project-link" href="https://github.com/makdoodie/InCollege">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="MemManage Pro" src="{{ "/assets/img/MemManage.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> MemManage Pro </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Data Structures </li>
+      <li> C++ </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>A command-line tool simulating FIFO, LRU, & VMS page-replacement algorithms in OS memory management. Features dual execution modes and an intuitive interface for streamlined user experience.</p>
+    <a class="project-link" href="https://github.com/makdoodie/MemManage-Pro">Check it out</a>
   </div>
 </div>
