Added proper images for projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="InCollege" src="{{ "/assets/img/InCollege.jpg" | prepend: site.baseurl }}" />
+    <img alt="InCollege" src="{{ "/assets/img/InCollege.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> InCollege </h3>
@@ -21,7 +21,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="MemManage Pro" src="{{ "/assets/img/MemManage.jpg" | prepend: site.baseurl }}" />
+    <img alt="MemManage Pro" src="{{ "/assets/img/MemManage.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> MemManage Pro </h3>
