Fixed header bug

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
       <p>Highly proficient in Python and C++, with solid experience in JavaScript.</p>
     </div>
     <div class="tech">
-      <h2>Technologies/Environments</h2>
+      <h2>Technologies</h2>
       <i class="devicon-visualstudio-plain colored"></i>
       <i class="devicon-jira-plain-wordmark colored"></i>
       <i class="devicon-git-plain colored"></i>
