Fixed icons again

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
       <p>Proficient across multiple operating systems, including Linux distributions, Mac OS, and Windows. Familiar with development environments, system configurations, and everyday tasks on each platform.</p>
     </div>  
     <div class="tech">
-      <h2>Code</h2>
+      <h2>Code/Programming</h2>
       <i class="devicon-python-plain-wordmark"></i>
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-javascript-plain colored"></i>
@@ -20,7 +20,7 @@
     <div class="tech">
       <h2>Technologies</h2>
       <i class="devicon-visualstudio-plain colored"></i>
-      <i class="devicon-jira-plain-wordmark colored"></i>
+      <i class="devicon-jira-plain colored"></i>
       <i class="devicon-git-plain colored"></i>
       <p>Specialized in creating Windows Form applications with Visual Studio. Experienced in project management with Jira and version control with Git.</p>
     </div>
