--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,3 +1,5 @@
+ 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">        
  <div class="user-details">
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
