Fixed margins/formatting on mobile

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
       <p>Proficient across multiple operating systems, including Linux distributions, Mac OS, and Windows. Familiar with development environments, system configurations, and everyday tasks on each platform.</p>
     </div>  
     <div class="tech">
-      <h2>Code/Programming</h2>
+      <h2>Code</h2>
       <i class="devicon-python-plain-wordmark"></i>
       <i class="devicon-cplusplus-plain colored"></i>
       <i class="devicon-javascript-plain colored"></i>
