Updated Projects Section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:sales@usf.edu"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href="mailto:mahmoodsales2002@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/mahmood-sales/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/makdoodie"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
