--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,9 +4,26 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="InCollege" src="{{ "/assets/img/InCollege.png" | prepend: site.baseurl }}" />
+    <img alt="Stock Visor" src="{{ "/assets/img/StockVisor.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
+    <h3> Stock Visor </h3>
+    <ul>
+      <li> C# Programming </li>
+      <li> .NET Framework Development </li>
+      <li> Abstraction and Polymorphism </li>
+      <li> Visual Studio </li>
+    </ul>
+    <p>Windows Forms tool for visualizing stock data and pattern recognition using .NET/C#</p>
+    <a class="project-link" href="https://github.com/makdoodie/Stock-Visor">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="InCollege" src="{{ "/assets/img/InCollege.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
     <h3> InCollege </h3>
     <ul>
       <li> SQLite </li>
@@ -19,17 +36,4 @@
   </div>
 </div>
 
-<div class="user-projects">
-  <div class="images-left">
-    <img alt="MemManage Pro" src="{{ "/assets/img/MemManage.png" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents-right">
-    <h3> MemManage Pro </h3>
-    <ul>
-      <li> Data Structures </li>
-      <li> C++ </li>
-    </ul>
-    <p>A command-line tool simulating FIFO, LRU, & VMS page-replacement algorithms in OS memory management. Features dual execution modes and an intuitive interface for streamlined user experience.</p>
-    <a class="project-link" href="https://github.com/makdoodie/MemManage-Pro">Check it out</a>
-  </div>
-</div>
+
